--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -18,13 +18,8 @@ jobs:
               uses: actions/setup-python@v2
               with:
                   python-version: '3.10'
-            - name: 🔧 Install dependencies
-              run: |
-                  python -m pip install --upgrade pip
-                  if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
             - name: ⏩ Run the Script
-              run: |
-                  python main.py
+              run: make run
             - uses: EndBug/add-and-commit@v7
               with:
                 default_author: github_actions
