--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -13,13 +13,14 @@ jobs:
             TZ: "Europe/Berlin"
 
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v3
             - name: 🛠 Set up Python 3.10
-              uses: actions/setup-python@v2
+              uses: actions/setup-python@v4
               with:
-                  python-version: '3.10'
+                python-version: '3.10'
+                cache: 'pip'
             - name: ⏩ Run the Script
               run: make run
-            - uses: EndBug/add-and-commit@v7
+            - uses: EndBug/add-and-commit@v9
               with:
                 default_author: github_actions
